src/app/components/page-loader/_index.scss
/*
 *  LOADER
 *  Interstitial page loading animation
 *
 */

@mixin page-loader-spinner($fg, $bg) {
  background-color: $bg;

  .loading-icon .half {
    .bg {
      background-color: $fg;
    }
    &.left,
    &.right {
      .bg {
        border-color: $bg;
      }
    }
  }
}

.page-loader {
  position: fixed;
  top: 0;
  z-index: 30;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 100vh;
  background-color: $offWhite;

  &.loading-home {
    @include page-loader-spinner(#fff, #6114CC);
  }
  &.loading-what-we-do {
    @include page-loader-spinner(#fff, $pot);
  }
  &.loading-blog {
    @include page-loader-spinner(#fff, $blu);
  }
  &.loading-join-us {
    @include page-loader-spinner(#000, $honey);
  }
}

